update layout nav links

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -68,9 +68,8 @@
                 </li>
                 <li><a href="{% url 'main:teams' %}">Ομάδες</a></li>
                 <li><a href="{% url 'main:news' %}">Νέα</a></li>
-                <li><a href="{% url 'main:about' %}">Γνωσιακή Βάση</a></li>
-                <li><a href="{% url 'main:about' %}">Συμμετοχή</a></li>
-                <li><a href="{% url 'main:about' %}">Επικοινωνία</a></li>
+                <li><a href="{% url 'main:apply' %}">Συμμετοχή</a></li>
+                <li><a href="{% url 'main:contact' %}">Επικοινωνία</a></li>
             </ul>
         </div>
     </nav>
