fix layout links

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -67,9 +67,9 @@
                         <li><a tabindex="-1" href="{% url 'main:about' %}#collapse3">Coworking space</a></li>
                    </ul>
                 </li>
-                <li id="blue"><a href="{% url 'main:teams' %}">Program</a></li>
-                <li id="yell"><a href="{% url 'main:about' %}">Events</a></li>
-                <li id="blue"><a href="{% url 'main:news' %}">Blog</a></li>
+                <li id="blue"><a href="{% url 'main:program' %}">Program</a></li>
+                <li id="yell"><a href="{% url 'main:events' %}">Events</a></li>
+                <li id="blue"><a href="{% url 'main:blog' %}">Blog</a></li>
                 <li id="yell"><a href="{% url 'main:contact' %}">Contact</a></li>
             </ul>
         </div>
